RI-7401 Fix broken key name layout (#4930)
* RI-7401: fix broken layout and colors

* RI-7401: fix broken layout for size, length, ttl layout

* RI-7401: fix all tooltip (globally) to show big strings properly

* RI-7401: fix key name behavior on hovering

--- a/redisinsight/ui/src/pages/browser/modules/key-details-header/components/key-details-header-name/styles.module.scss
+++ b/redisinsight/ui/src/pages/browser/modules/key-details-header/components/key-details-header-name/styles.module.scss
@@ -8,7 +8,7 @@
 }
 
 .toolTipAnchorKey {
-  max-width: calc(100% - 25px);
+  max-width: 450px;
   height: 31px !important;
 }
 
@@ -16,6 +16,11 @@
   height: 31px !important;
   font-size: 14px !important;
   font-weight: 500 !important;
+  flex: 1;
+  max-width: 400px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 :global(.browserPage .key-details-header .euiFormControlLayout) {
@@ -35,12 +40,10 @@
 }
 
 .copyKey {
-  position: absolute;
-  padding-left: 7px;
-  padding-top: 4px;
-  right: 0;
+  display: flex;
+  align-items: center;
   height: 31px;
-  width: 25px;
+  flex-shrink: 0;
 }
 
 .capitalize {
@@ -51,19 +54,11 @@
   display: flex;
   width: 100%;
   min-width: 100%;
-
+  max-width: 400px;
   padding-left: 9px;
   line-height: 31px !important;
 }
 
 .hidden {
   display: none;
-}
-
-.keyFlexItem {
-  overflow: hidden;
-}
-
-.keyFlexItemEditing {
-  overflow: inherit;
 }
